[gd_scene load_steps=21 format=2]

[ext_resource path="res://res/UI/Shop UI/rocket page/rockets_page.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Store Switcher.gd" type="Script" id=2]
[ext_resource path="res://Scenes/RocketBuy.gd" type="Script" id=3]
[ext_resource path="res://res/icons/red_cross.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="Rocket Page Store" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="RocketBuy" type="Sprite" parent="."]
position = Vector2( 360, 351 )
scale = Vector2( 0.734151, 0.737619 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Button" type="Button" parent="RocketBuy"]
margin_left = -223.0
margin_top = -217.0
margin_right = -147.0
margin_bottom = -179.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 16 )

[node name="Button2" type="Button" parent="RocketBuy"]
margin_left = 48.0
margin_top = -207.0
margin_right = 122.0
margin_bottom = -169.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )

[node name="Button3" type="Button" parent="RocketBuy"]
margin_left = 279.0
margin_top = -202.0
margin_right = 353.0
margin_bottom = -172.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )

[node name="Button4" type="Button" parent="RocketBuy"]
margin_left = -116.0
margin_top = 214.0
margin_bottom = 257.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )

[node name="Button5" type="Button" parent="RocketBuy"]
margin_left = 212.0
margin_top = 229.0
margin_right = 339.0
margin_bottom = 272.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )

[node name="Button" type="Button" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 127.0
margin_bottom = 41.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Button2" type="Button" parent="."]
margin_left = 1.0
margin_top = 44.0
margin_right = 127.0
margin_bottom = 94.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Button3" type="Button" parent="."]
margin_left = 1.0
margin_top = 98.0
margin_right = 127.0
margin_bottom = 147.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Button4" type="Button" parent="."]
margin_left = 616.0
margin_top = 656.0
margin_right = 718.0
margin_bottom = 700.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[node name="Red Bars" type="Node2D" parent="."]

[node name="Bullet" type="Sprite" parent="Red Bars"]
visible = false
position = Vector2( 224.5, 205 )
scale = Vector2( 0.422222, 0.8 )
texture = ExtResource( 4 )

[node name="Lucky" type="Sprite" parent="Red Bars"]
visible = false
position = Vector2( 422.25, 212.5 )
scale = Vector2( 0.403704, 0.828571 )
texture = ExtResource( 4 )

[node name="TIME" type="Sprite" parent="Red Bars"]
visible = false
position = Vector2( 592.375, 213.5 )
scale = Vector2( 0.394445, 0.657142 )
texture = ExtResource( 4 )

[node name="US mil" type="Sprite" parent="Red Bars"]
visible = false
position = Vector2( 317.5, 524.5 )
scale = Vector2( 0.62963, 0.885714 )
texture = ExtResource( 4 )

[node name="Lucky mil" type="Sprite" parent="Red Bars"]
visible = false
position = Vector2( 562.75, 536 )
scale = Vector2( 0.67037, 0.885714 )
texture = ExtResource( 4 )

[connection signal="button_down" from="RocketBuy/Button" to="RocketBuy" method="_on_Button_button_down"]
[connection signal="button_down" from="RocketBuy/Button2" to="RocketBuy" method="_on_Button2_button_down"]
[connection signal="button_down" from="RocketBuy/Button3" to="RocketBuy" method="_on_Button3_button_down"]
[connection signal="button_down" from="RocketBuy/Button4" to="RocketBuy" method="_on_Button4_button_down"]
[connection signal="button_down" from="RocketBuy/Button5" to="RocketBuy" method="_on_Button5_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_Button4_button_down"]
